--- a/frontend/login_register.css
+++ b/frontend/login_register.css
@@ -316,7 +316,7 @@ body {
 .hero {
 	width: 100%;
 	height: 100%;
-	background: #f2efec;  
+	/* background: #f2efec;   */
 	position: absolute;
 }
 
@@ -434,6 +434,142 @@ span {
 }
 
 
+
+
+/* Footer */
+footer{
+  margin-top: 680px;
+  z-index: 1;
+  background-color: #f2f0f0;
+  padding-top: 40px;
+}
+#foot{
+  
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  width: 70%;
+  margin: auto;
+  justify-content: space-between;
+  
+}
+#foot h4{
+  color: red;
+}
+h5{
+  text-align: center;
+}
+#social{
+  display: flex;
+  justify-content: space-evenly;
+  width: 30%;
+  margin: auto;
+  /* border: 1px solid red; */
+}
+#social div{
+  /* border: 1px solid black; */
+  width: 40%;
+}
+@media screen and (max-width:400px) {
+  #social div{
+    width: 30%;
+  }
+}
+#social img{
+  width: 100%;
+}
+#follow{
+  display: flex;
+  width: 70%;
+  margin: auto;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+#follow img{
+ width: 70%;
+}
+
+/* Acoordian */
+.accordion {
+  background-color: #f2f0f0;
+  color: red;
+  cursor: pointer;
+  padding: 18px;
+  width: 72%;
+  display: block;
+  margin: auto;
+  /* padding: 0 18px; */
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.5s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #eee9e9;
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  width: 69.7%;
+  margin: auto;
+  padding: 0 18px;
+  background-color: #f2f0f0;
+  display: none;
+  overflow: hidden;
+}
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+.panel .red{
+  color: red;
+}
+/* Acoordian */
+#app{
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid red; */
+  width: 72%;
+  margin: auto;
+}
+@media screen and (max-width:1400px){
+  #app{
+    flex-direction: column;
+  }
+  #app>div{
+    /* border: 1px solid red; */
+    margin: auto;
+  }
+}
+@media screen and (max-width:750px){
+  #foot{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+  }
+  #app img{
+    width: 60%;
+  }
+  #ship img{
+    width: 5%;
+    
+  }
+}
+#ship img{
+  justify-content: space-between;
+  width: 15%;
+  margin-left: 8px;
+}
+/* Footer */
 
 
 
