--- a/frontend/tops.css
+++ b/frontend/tops.css
@@ -1,3 +1,5 @@
+
+
 #sidebar{
     margin-top: 50px;
 }
@@ -26,6 +28,21 @@
     margin-left: 20px;
     grid-template-columns: repeat(4,1fr);
     gap: 50px;
+}
+@media screen  and (max-width:1200px){
+    #display_product{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+@media screen  and (max-width:1000px){
+    #display_product{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media screen  and (max-width:700px){
+    #display_product{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
 .card button{
     display: block;
